# MDV

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: codebaseSummary.md  currentTask.md  knownIssues.md  projectRoadmap.md  prompt.md  techStack.md
src/: CMakeLists.txt  main.cpp
src/gui/: MainWindow.cpp  MainWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/markdown/: MarkdownRenderer.cpp  MarkdownRenderer.hpp
src/utils/: FontManager.cpp  FontManager.hpp
